--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,23 @@
-permalink: /:categories/:title/
-url: "http://example.com"
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
 
-baseurl:
+# Site settings
+title: Your Blog Title
+description: '' # write a nice description for your blog
+baseurl: '' # the subpath of your site, e.g. /blog
+url: '' # the base hostname & protocol for your site http://www.example.com
+# google_analytics: 'UA-XXXXXX-X'
+twitter_username: 'twitter_username'
 
-remote_theme: hoffli/saigon-jekyll-theme
+# Build settings
+markdown: kramdown
 
-full_name: "Saigon Jekyll Theme"
-first_name: "Just"
-last_name: "Me"
-blog_title: "Title"
-author_img_name_path: "/images/users/user.jpg"
-disqus_shortname: "example"
-copyright_year: "2016"
-google_analytics_code: ""
-aboutme: "I like ramen noodles with cream."
+permalink: '/:title/'
+
+gems: [jekyll-paginate]
+
+paginate: 10
