--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: Your Blog Title
 description: '' # write a nice description for your blog
-baseurl:
+baseurl: ''
 remote_theme: adueck/cayman-blog
 url: '' # the base hostname & protocol for your site http://www.example.com
 # google_analytics: 'UA-XXXXXX-X'
