타이틀 수정

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: 최현진의 정적페이지
-description: 여기는 어떻게 쓰여질까 테스트~
+title: 주니어 개발자 채용공고 20-1-SKKU-OSS-3
+description: 2017312010 최현진
 cover: assets/images/radhakrishna.jpg
 logo: assets/images/logo.png
 favicon: assets/images/favicon.png
