--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Texture Theme
-author: GitHub User
-email: your-email@domain.com
+title: 주니어 개발자 채용 공고 20-1-SKKU-OSS-3
+author: 2017312010 최현진
+email: eaglus@naver.com
 description: > # this means to ignore newlines until "show_exerpts:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
