--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: 주니어 개발자 채용 공고 20-1-SKKU-OSS-3
-author: 2017312010 최현진
+title: Junior Recruit Scheduler
+author: Hyeonjin Choi
 email: eaglus@naver.com
 description: > # this means to ignore newlines until "show_exerpts:"
   Write an awesome description for your new site here. You can edit this
@@ -17,8 +17,8 @@ sass:
 
 permalink: /posts/:title/
 texture:
-  title: Adam Denisov
-  tagline: Developer. Designer
+  title: 주니어 개발자 채용 공고 20-1-SKKU-OSS-3
+  tagline: 2017312010 최현진
   date_format: "%b %-d, %Y"
   style: black
   showNav: false
